# Raspberrypi_PicoW_Setup_2026

./: .gitignore  CMakeLists.txt  Readme.md  inbuild.bat  main.c  pico_blink.c  piow_setup.docx  readme.md
